# MCP

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
examples/: README.md  test-calculator.sh
patients-api/: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt
patients-api/.claude/: settings.local.json
patients-api/src/: __init__.py  server.py
pdf-extract/: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
pdf-extract/.claude/: settings.local.json
pdf-extract/src/: __init__.py  ocr_processor.py  pdf_extractor.py  server.py  summarizer.py
pdf-extract/tests/: create_test_pdf.py
src/servers/calculator/: index.ts
src/servers/filesystem/: index.ts
src/servers/weather/: index.ts
